# aldtts-modules

./: .gitignore  pyproject.toml
aldtts/modules/: XtendedCorrel.py  blueprint.py  dependency_measure.py  dependency_test.py  evaluator.py  experiment_modules.py  selection_criteria.py  test_interpolation.py  two_sample_test.py
aldtts/modules/query/: query_decider.py
