[tool.poetry]
name = "aldtts-modules"
version = "0.2.0"
description = "Modules for aldtts"
authors = ["bela127 <bhb127@outlook.de>"]
license = "MIT"
packages = [
    { include = "aldtts/modules", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
#aldtts-core = { path = "/home/bela/Cloud/code/Git/aldtts-core", develop = true }
#alts-modules = { path = "/home/bela/Cloud/code/Git/alts-modules", develop = true }
alts-modules = {git = "https://github.com/bela127/alts-modules.git"}
aldtts-core = {git = "https://github.com/bela127/aldtts-core.git"}
dcor = "^0.5.3"
fcit = "^1.2.0"
xicor = "^1.0.1"
pandas = "^2.0.3"
bayesian-optimization = "^1.2.0"
tbb = "^2021.10.0"
hyppo = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
black = "^21.6b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
plugins = "numpy.typing.mypy_plugin"
